--- a/Flottenkampf/Flottenkampf.vcxproj
+++ b/Flottenkampf/Flottenkampf.vcxproj
@@ -129,10 +129,15 @@
   <ItemGroup>
     <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="common.h" />
+    <ClInclude Include="constants.h" />
+    <ClInclude Include="cruiser.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="ship.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
